--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -16,7 +16,7 @@
       max-width: 1440px;
       display: flex;
       justify-content: space-between;
-      margin-bottom: 3.125em;
+      margin-bottom: 2em;
   }
 }
 
@@ -42,13 +42,12 @@
   flex-direction: column;
   top: 110%;
   right: .5rem;
-  padding: 2rem;
+  padding: 2em;
   width: fit-content;
   background-color: $light-clr;
   border-radius: 6px;
   box-shadow: 11px 18px 54px rgba(0, 0, 0, 0.11);
   user-select: none;
-  z-index: 1;
   animation: dotMenuAnimation ease-in 150ms;
   
   @keyframes dotMenuAnimation {
@@ -78,27 +77,24 @@
 
 .form {
   display: flex;
+  height: fit-content;
   align-items: center;
 
   @media (min-width: 980px) {
-    width: 243px;
-    align-items: end;
+    margin-block: auto 0;
+    width: 280px;
   }
+}
 
-  input {
-    border: none;
-    border-radius: 50px;
-    padding: .8rem;
-    width: 100%;
-    margin-right: 1.25em;
-   @include backgroundImage('../assets/search.svg', 22px , center right .8em );
+.searchInput {
+  border: none;
+  border-radius: 50px;
+  padding: .8rem;
+  width: 100%;
+  margin-right: 1.25em;
+ @include backgroundImage('../assets/search.svg', 22px , center right .8em );
 
-    &:focus {
-      outline: 2px solid $accent-clr;
-    }
-  }
-
-  img {
-    cursor: pointer;
+  &:focus {
+    outline: 2px solid $accent-clr;
   }
 }
