--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -18,6 +18,17 @@
       justify-content: space-between;
       margin-bottom: 2em;
   }
+
+  img {
+    padding: 1.25em 1em;
+    @include backgroundImage('../assets/menu.svg', 20px, center );
+    transition: linear 150ms;
+    border-radius: 6px;
+    
+    &:hover {
+      background-color: #eaeaea;
+    }
+  }
 }
 
 .titleContainer {
